--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,17 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:teensy41]
+[platformio]
+default_envs = teensy41-debug
+
+[env:teensy41-debug]
 platform = teensy
 board = teensy41
 framework = arduino
+build_flags = -DDEBUG_SC ${env.build_flags}
+
+[env:teensy41-release]
+platform = teensy
+board = teensy41
+framework = arduino
+build_flags = -DRELEASE_SC ${env.build_flags}
