some minor cleanups

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,9 +16,11 @@ platform = teensy
 board = teensy41
 framework = arduino
 build_flags = -DDEBUG_SC ${env.build_flags}
+lib_deps = adafruit/Adafruit BusIO@^1.7.2
 
 [env:teensy41-release]
 platform = teensy
 board = teensy41
 framework = arduino
 build_flags = -DRELEASE_SC ${env.build_flags}
+lib_deps = adafruit/Adafruit BusIO@^1.7.2
