--- a/platformio.ini
+++ b/platformio.ini
@@ -16,11 +16,19 @@ platform = teensy
 board = teensy41
 framework = arduino
 build_flags = -DDEBUG_SC ${env.build_flags}
-lib_deps = adafruit/Adafruit BusIO@^1.7.2
+lib_deps = 
+	adafruit/Adafruit BusIO@^1.7.2
+	adafruit/Adafruit GFX Library@^1.11.5
+	adafruit/Adafruit LED Backpack Library@^1.3.2
+	adafruit/Adafruit SSD1306@^2.5.7
 
 [env:teensy41-release]
 platform = teensy
 board = teensy41
 framework = arduino
 build_flags = -DRELEASE_SC ${env.build_flags}
-lib_deps = adafruit/Adafruit BusIO@^1.7.2
+lib_deps = 
+	adafruit/Adafruit BusIO@^1.7.2
+	adafruit/Adafruit GFX Library@^1.11.5
+	adafruit/Adafruit LED Backpack Library@^1.3.2
+	adafruit/Adafruit SSD1306@^2.5.7
